--- a/.classpath
+++ b/.classpath
@@ -1,87 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/activation-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/axis-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/axis-jaxrpc-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/axis-saaj-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/axis-wsdl4j-1.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/classmate-1.0.0.jar"/>
-	<classpathentry kind="lib" path="lib/classworlds-1.1-alpha-2.jar"/>
-	<classpathentry kind="lib" path="lib/ClusterEvaluator.jar"/>
-	<classpathentry kind="lib" path="lib/commons-beanutils-1.9.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-discovery-0.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/easywsdl-schema-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/easywsdl-wsdl-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/ezmorph-1.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/geronimo-activation_1.1_spec-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/gson-2.2.4.jar"/>
-	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-validator-5.1.3.Final.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-annotations-2.4.6.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-core-2.4.6.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-databind-2.4.6.jar"/>
-	<classpathentry kind="lib" path="lib/java-cup-0.11a.jar"/>
-	<classpathentry kind="lib" path="lib/javax.servlet-api-3.1.0.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb-api-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb-impl-2.1.10.jar"/>
-	<classpathentry kind="lib" path="lib/jboss-logging-3.1.3.GA.jar"/>
-	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.7.12.jar"/>
-	<classpathentry kind="lib" path="lib/json-lib-2.3-jdk15.jar"/>
-	<classpathentry kind="lib" path="lib/jsp-api-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/jul-to-slf4j-1.7.12.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-over-slf4j-1.7.12.jar"/>
-	<classpathentry kind="lib" path="lib/logback-classic-1.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/logback-core-1.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/maven-artifact-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/maven-artifact-manager-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/maven-model-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/maven-plugin-api-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/maven-plugin-registry-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/maven-profile-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/maven-project-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/maven-repository-metadata-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/maven-settings-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/pentaho-package-manager-1.0.8.jar"/>
-	<classpathentry kind="lib" path="lib/plexus-container-default-1.0-alpha-9-stable-1.jar"/>
-	<classpathentry kind="lib" path="lib/plexus-utils-1.5.6.jar"/>
-	<classpathentry kind="lib" path="lib/properties-maven-plugin-1.0-alpha-2.jar"/>
-	<classpathentry kind="lib" path="lib/runtime-0.4.1.5.jar"/>
-	<classpathentry kind="lib" path="lib/serviceClusterer-0.1.0.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.7.12.jar"/>
-	<classpathentry kind="lib" path="lib/snakeyaml-1.14.jar"/>
-	<classpathentry kind="lib" path="lib/spring-aop-4.1.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-beans-4.1.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-boot-1.2.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-boot-autoconfigure-1.2.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-boot-starter-1.2.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-boot-starter-logging-1.2.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-boot-starter-tomcat-1.2.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-boot-starter-web-1.2.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-context-4.1.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-core-4.1.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-expression-4.1.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-mock-2.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/spring-web-4.1.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/spring-webmvc-4.1.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="lib/stax-api-1.0-2.jar"/>
-	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/tomcat-embed-core-8.0.23.jar"/>
-	<classpathentry kind="lib" path="lib/tomcat-embed-el-8.0.23.jar"/>
-	<classpathentry kind="lib" path="lib/tomcat-embed-logging-juli-8.0.23.jar"/>
-	<classpathentry kind="lib" path="lib/tomcat-embed-websocket-8.0.23.jar"/>
-	<classpathentry kind="lib" path="lib/validation-api-1.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib/wagon-provider-api-1.0-beta-2.jar"/>
-	<classpathentry kind="lib" path="lib/weka-3-8-0-monolithic.jar"/>
-	<classpathentry kind="lib" path="lib/optics_dbScan.jar"/>
-	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/activation-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/aopalliance-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/axis-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/axis-jaxrpc-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/axis-saaj-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/axis-wsdl4j-1.5.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/classmate-1.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/classworlds-1.1-alpha-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ClusterEvaluator.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-beanutils-1.9.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-discovery-0.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-fileupload-1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/easywsdl-schema-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/easywsdl-wsdl-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ezmorph-1.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/geronimo-activation_1.1_spec-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gson-2.2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/hibernate-validator-5.1.3.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-annotations-2.4.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-core-2.4.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-databind-2.4.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/java-cup-0.11a.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javax.servlet-api-3.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-api-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl-2.1.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jboss-logging-3.1.3.GA.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jcl-over-slf4j-1.7.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/json-lib-2.3-jdk15.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jsp-api-2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jul-to-slf4j-1.7.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/junit-4.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-over-slf4j-1.7.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/logback-classic-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/logback-core-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-artifact-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-artifact-manager-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-model-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-plugin-api-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-plugin-registry-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-profile-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-project-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-repository-metadata-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/maven-settings-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/pentaho-package-manager-1.0.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/plexus-container-default-1.0-alpha-9-stable-1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/plexus-utils-1.5.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/properties-maven-plugin-1.0-alpha-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/runtime-0.4.1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/serviceClusterer-0.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/snakeyaml-1.14.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-aop-4.1.7.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-beans-4.1.7.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-boot-1.2.5.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-boot-autoconfigure-1.2.5.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-boot-starter-1.2.5.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-boot-starter-logging-1.2.5.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-boot-starter-tomcat-1.2.5.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-boot-starter-web-1.2.5.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-context-4.1.7.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-core-4.1.7.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-expression-4.1.7.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-mock-2.0.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-web-4.1.7.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/spring-webmvc-4.1.7.RELEASE.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/stax-api-1.0-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/stax-api-1.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tomcat-embed-core-8.0.23.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tomcat-embed-el-8.0.23.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tomcat-embed-logging-juli-8.0.23.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tomcat-embed-websocket-8.0.23.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/validation-api-1.1.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/wagon-provider-api-1.0-beta-2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/weka-3-8-0-monolithic.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/optics_dbScan.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
